# ckanext-qdes

./: .gitignore  .travis.yml  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
ckanext/qdes/: blueprint.py  cli.py  constants.py  helpers.py  jobs.py  middleware.py  plugin.py  validators.py
ckanext/qdes/access/: blueprint.py  helpers.py  middleware.py  plugin.py
ckanext/qdes/access/logic/auth/: create.py  delete.py  get.py  update.py
ckanext/qdes/access/templates/: header.html
ckanext/qdes/access/templates/organization/: ad_group_new.html  ad_groups.html  edit_base.html
ckanext/qdes/access/templates/user/: dashboard.html  login.html
ckanext/qdes/assets/: dashboard_reports.js  webassets.yml
ckanext/qdes/logic/action/: create.py  delete.py  get.py
ckanext/qdes/logic/helpers/: report_helpers.py
ckanext/qdes/templates/: contact_page.html
ckanext/qdes/templates/activity_streams/: activity_stream_email_notifications.text
ckanext/qdes/templates/admin/: api_tokens.html  base.html  config.html
ckanext/qdes/templates/admin/snippets/: api_token_list.html
ckanext/qdes/templates/emails/body/: review_datasets.html  review_datasets.txt  validate_datasets.html  validate_datasets.txt
ckanext/qdes/templates/emails/subject/: review_datasets.txt  validate_datasets.txt
ckanext/qdes/templates/organization/: edit_base.html  member_new.html
ckanext/qdes/templates/user/: dashboard.html  dashboard_datasets.html  dashboard_follows.html  dashboard_reports.html  dashboard_review_datasets.html  read.html
ckanext/qdes/tests/: test_plugin.py
