[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
babel.extractors =
    ckan = ckan.lib.extract:extract_ckan

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/qdes/i18n/ckanext-qdes.pot
width = 80

[init_catalog]
domain = ckanext-qdes
input_file = ckanext/qdes/i18n/ckanext-qdes.pot
output_dir = ckanext/qdes/i18n

[update_catalog]
domain = ckanext-qdes
input_file = ckanext/qdes/i18n/ckanext-qdes.pot
output_dir = ckanext/qdes/i18n
previous = true

[compile_catalog]
domain = ckanext-qdes
directory = ckanext/qdes/i18n
statistics = true
